build/log/idf_py_stderr_output_1130046
Command: make -j 18 all
Configuration Report               
 ───────────────────────────────── 
   Parser Version: 1               
   Verbosity: default              
   Defaults policy: sdkconfig      
   Status: Finished successfully   
                                   
 ───────────────────────────────── 
CMake Warning at /home/levi/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/levi/esp-idf/components/esp_wifi/wifi_apps/roaming_app/include'
  belongs to component esp_wifi but is being used by component
  wpa_supplicant.  It is recommended to define the component dependency for
  wpa_supplicant on the component esp_wifi, i.e.  'idf_component_register(...
  PRIV_REQUIRES esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component esp_wifi.
Call Stack (most recent call first):
  /home/levi/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/levi/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


CMake Warning at /home/levi/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/levi/esp-idf/components/esp_wifi/wifi_apps/roaming_app/src' belongs
  to component esp_wifi but is being used by component wpa_supplicant.  It is
  recommended to define the component dependency for wpa_supplicant on the
  component esp_wifi, i.e.  'idf_component_register(...  PRIV_REQUIRES
  esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component esp_wifi.
Call Stack (most recent call first):
  /home/levi/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/levi/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


CMake Warning at /home/levi/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/levi/esp-idf/components/wpa_supplicant/src' belongs to component
  wpa_supplicant but is being used by component esp_wifi.  It is recommended
  to define the component dependency for esp_wifi on the component
  wpa_supplicant, i.e.  'idf_component_register(...  PRIV_REQUIRES
  wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component wpa_supplicant.
Call Stack (most recent call first):
  /home/levi/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/levi/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


CMake Warning at /home/levi/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/levi/esp-idf/components/wpa_supplicant/esp_supplicant/src' belongs
  to component wpa_supplicant but is being used by component esp_wifi.  It is
  recommended to define the component dependency for esp_wifi on the
  component wpa_supplicant, i.e.  'idf_component_register(...  PRIV_REQUIRES
  wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component wpa_supplicant.
Call Stack (most recent call first):
  /home/levi/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/levi/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


/home/levi/CLionProjects/maestro/main/encoders.c:11:23: error: 'TAG' defined but not used [-Werror=unused-const-variable=]
   11 | static constexpr char TAG[] = "encoders";
      |                       ^~~
cc1: all warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:118: esp-idf/main/CMakeFiles/__idf_main.dir/encoders.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:6639: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
